Fixed title width on mobile phones

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -95,6 +95,10 @@ a.site-title, a.site-title:visited {
 	font-family: 'Oleo Script Swash Caps', cursive;
 	letter-spacing: normal;
 	font-size: 35px;
+	
+	@media screen and (max-width: 600px) {
+		font-size: 27px;
+	}
 }
 
 .post-meta {
